-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11
-
Component/s: hotspot
-
b14
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8203534 | 11.0.1 | Nils Eliasson | P3 | Resolved | Fixed | team |
===== DaCapo 9.12 lusearch starting =====
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/loopopts.cpp:2338
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (.../zgc/open/src/hotspot/share/opto/loopopts.cpp:2338), pid=1508, tid=1539
# Error: assert(dom_depth(useuse) > dd_r) failed
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-2018-04-03-1408582.neliasso.zgc)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-2018-04-03-1408582.neliasso.zgc, mixed mode, z gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to ...
#
# An error report file with more information is saved as:
# .../DaCapo2009/data/hs_err_pid1508.log
#
# Compiler replay data is saved as:
# .../DaCapo2009/data/replay_pid1508.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Running dacapo2009/lusearch on openjdk/zgc repo with loop strip mining on.
Repro:
java -XX:-TieredCompilation -XX:+UseZGC -Xmx1G -Xms1G -XX:-CreateCoredumpOnCrash -XX:+UseCountedLoopSafepoints -XX:LoopStripMiningIter=1000 -jar dacapo-9.12-bach.jar lusearch
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/loopopts.cpp:2338
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (.../zgc/open/src/hotspot/share/opto/loopopts.cpp:2338), pid=1508, tid=1539
# Error: assert(dom_depth(useuse) > dd_r) failed
#
# JRE version: Java(TM) SE Runtime Environment (11.0) (fastdebug build 11-internal+0-2018-04-03-1408582.neliasso.zgc)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 11-internal+0-2018-04-03-1408582.neliasso.zgc, mixed mode, z gc, linux-amd64)
# Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to ...
#
# An error report file with more information is saved as:
# .../DaCapo2009/data/hs_err_pid1508.log
#
# Compiler replay data is saved as:
# .../DaCapo2009/data/replay_pid1508.log
#
# If you would like to submit a bug report, please visit:
# http://bugreport.java.com/bugreport/crash.jsp
#
Running dacapo2009/lusearch on openjdk/zgc repo with loop strip mining on.
Repro:
java -XX:-TieredCompilation -XX:+UseZGC -Xmx1G -Xms1G -XX:-CreateCoredumpOnCrash -XX:+UseCountedLoopSafepoints -XX:LoopStripMiningIter=1000 -jar dacapo-9.12-bach.jar lusearch
- backported by
-
JDK-8203534 Update idom to get correct dom depth calculation
-
- Resolved
-