8201532: Update idom to get correct dom depth calculation

Assert due to dom depth calculation on old idom

Reviewed-by: roland